code/java/FactSetConcordance/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Concordance client library for Java

[![API Version](https://img.shields.io/badge/api-v2.11.0-blue)]()
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/factsetconcordance/3.0.0)](https://central.sonatype.com/artifact/com.factset.sdk/factsetconcordance/3.0.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)



The FactSet Concordance API enables Application Developers and Data Scientists to programmatically discover the FactSet Identifier for a specific Entity or Person based on attributes, such as name, URL, and location.FactSet Identifiers are mapped to industry-standard identifiers, as well as to a comprehensive set of reference data and unique content, to enhance the ability to quickly connect content sets.<p>  

 Using the submitted attributes, the FactSet Concordance API leverages FactSet’s extensive Entity Master, People, and Symbology databases to return potential candidate matches and a proposed match. The result is a concorded FactSet Identifier that can then be used as input throughout FactSet's expanding catalog of Content using our Content APIs or Standard DataFeeds.</p>
 
 <b>There are two types of workflows supported in the API:</b>
 
 <b>Entity & People Match:</b> The first workflow follows traditional API conventions in that a request is accepted and a response is returned synchronously enabling the concordance of up to 25 names in a single request. The response returns a list of 20 candidates as well as a proposed match.
 
 <b>Entity & People Match - Bulk:</b> The second workflow allows you to input a large list of names within a .CSV file in a single request. With this workflow, a task is created for uploading a set of queries. Once the task has completed, the client retrieves the concordance results through the /entity-decisions or /people-decisions endpoint. Note that in the Bulk workflow, only the matches for the records are returned. Candidates are not included.
 
 Once the service has provided a list of concorded FactSet Identifiers, you can then use our Entity Mappings and People Mappings endpoints to further review the universe of mapped identifiers or modify existing records. </p><p><b>Rate limit is set to 10 requests per second</b>.</p>
 
 Methodology Guide link: 
 [https://open.factset.com/api/public/media/download/products/documents/8ca33e81-a7da-4d77-a8cf-2b3a2e868b3d](https://open.factset.com/api/public/media/download/products/documents/8ca33e81-a7da-4d77-a8cf-2b3a2e868b3d)

 


This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.11.0
- SDK version: 3.0.0
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>factsetconcordance</artifactId>
  <version>3.0.0</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:factsetconcordance:3.0.0"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.FactSetConcordance.*;
import com.factset.sdk.FactSetConcordance.auth.*;
import com.factset.sdk.FactSetConcordance.models.*;
import com.factset.sdk.FactSetConcordance.api.EntityMatchApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class EntityMatchApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        EntityMatchApi apiInstance = new EntityMatchApi(defaultClient);
        String name = "Tesla"; // String | Name of Entity to match.
        String country = "US"; // String | ISO2 country code corresponding to the entity name that is used when evaluating candidates for a match. For a list of ISO2 Country codes, visit [OA 8754](https://my.apps.factset.com/oa/pages/8754#country).
        String state = "TX"; // String | Two-character state code corresponding to the entity name that is used when evaluating candidates for a match. Currently, only US state codes are supported.
        String url = "www.tesla.com"; // String | URL corresponding to the entity name that is used when evaluating candidates for a match.
        java.util.List<String> includeEntityType = Arrays.asList(); // java.util.List<String> | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Only candidates with an entity type specified will be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |---|---|---|---|   |ABS|Asset-Backed|MED|Broadcast Call Sign|   |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End|   |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF|   |CMD|Commodity|MUT|Mutual Fd-Open End|   |COL|College/University|NPO|Non-Profit Organization|   |CUR|Currency|OPD|Operating Division|   |ESP|Emp Stk Ownership Plan|OTH|Other|   |EXT|Extinct|PEF|Pension Fund|   |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property|   |FND|Foundation/Endowment|PUB|Public Company|   |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt|   |FRX|ForEx|PVT|Private Company|   |GOV|Government|SOV|Sovereign Wealth Fund|   |HED|Hedge Fund|SUB|Subsidiary|   |HOL|Holding Company|TRU|Trust/Trustee|   |IDX|Index|UMB|Umbrella Fund|   |VEN|Venture Capital Fund|JVT|Joint Venture| 
        java.util.List<String> excludeEntityType = Arrays.asList(); // java.util.List<String> | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Candidates with an entity type specified will *not* be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |---|---|---|---| |ABS|Asset-Backed|MED|Broadcast Call Sign| |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End| |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF| |CMD|Commodity|MUT|Mutual Fd-Open End| |COL|College/University|NPO|Non-Profit Organization| |CUR|Currency|OPD|Operating Division| |ESP|Emp Stk Ownership Plan|OTH|Other| |EXT|Extinct|PEF|Pension Fund| |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property| |FND|Foundation/Endowment|PUB|Public Company| |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt| |FRX|ForEx|PVT|Private Company| |GOV|Government|SOV|Sovereign Wealth Fund| |HED|Hedge Fund|SUB|Subsidiary| |HOL|Holding Company|TRU|Trust/Trustee| |IDX|Index|UMB|Umbrella Fund| |VEN|Venture Capital Fund|JVT|Joint Venture| 
        java.util.List<String> includeEntitySubType = Arrays.asList(); // java.util.List<String> | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Only candidates with an entity subtype specified will be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description|   |---|---|---|---|   |AR|Arbitrage|IC|Investment Company|   |BM|Bank Investment Division|IN|Insurance Company|   |BR|Broker|MF|Mutual Fund Manager|   |CP|Corporate|ML|Master Ltd Part|   |CU|Custodial|MM|Market Maker|   |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt|   |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager|   |FO|Foundation/Endowment Manager|PP|Real Estate Manager|   |FS|Fund Distributor|RE|Research Firm|   |FU|Fund|SB|Subsidiary Branch|   |FY|Family Office|ST|Stock Borrowing/Lending|   |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager|   |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity|   |IA|Investment Adviser|   |IB|Investment Banking| 
        java.util.List<String> excludeEntitySubType = Arrays.asList(); // java.util.List<String> | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Candidates with an entity subtype specified will not be considered for the final match result. Multiple types can be entered separated by commas. |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description| |---|---|---|---| |AR|Arbitrage|IC|Investment Company| |BM|Bank Investment Division|IN|Insurance Company| |BR|Broker|MF|Mutual Fund Manager| |CP|Corporate|ML|Master Ltd Part| |CU|Custodial|MM|Market Maker| |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt| |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager| |FO|Foundation/Endowment Manager|PP|Real Estate Manager| |FS|Fund Distributor|RE|Research Firm| |FU|Fund|SB|Subsidiary Branch| |FY|Family Office|ST|Stock Borrowing/Lending| |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager| |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity| |IA|Investment Adviser| |IB|Investment Banking| 
        Boolean includeParent = false; // Boolean | Flag to include parent entities in the list of candidates. This parameter does not influence the match result.
        String bbgFigi = "BBG000N9P426"; // String | Input identifiers for the Bloomberg Listing/Regional/Security ID symbol type.
        String bbgTicker = "TSLA UW"; // String | Input identifiers for the Bloomberg Listing and Regional Ticker symbol Type.
        String bic = "TSLAUS66"; // String | Input identifiers for the BICCode - Bank Indentification Code symbol Type.
        String cik = "1318605"; // String | Input identifiers for the CIK - Edgar Central Index Keys symbol type.
        String crd = "CRD"; // String | Input identifiers for the CRD - Central Registration Depository symbol type.
        String creditsafe = "DE00001447"; // String | Creditsafe Identifier
        String crunchbase = "9d94b6c1-8b80-4169-8fd5-115bee96cde0"; // String | Crunchbase Identifier
        String cusip = "88160R101"; // String | Input identifiers for the CUSIP symbol type.
        String ein = "912197729"; // String | Input identifiers for the EIN - Employer Identification Number symbol type.
        String factsetId = "006XY7-E"; // String | Input identifiers for the type FactSet Identifier - FactSet -E,-S,-R, -L Permanent Identifier symbol type.
        String fitch = "FitchCreditRating"; // String | Input identifiers for the Fitch - Fitch Ratings symbol type.
        String gvkey = "GVKey"; // String | Input identifiers for the type GVKEY - Compustat Global Company Key symbol type.
        String gvkeyIid = "GVKeyIssueIdentifier"; // String | Input identifiers for the type GVKEY+IID - Compustat Global Company Key and Issue Identifier symbol type.
        String isin = "US88160R1014"; // String | Input identifiers for the ISIN - International Securities Identification Number symbol type.
        String jcn = "JCN"; // String | Input identifiers for the type JCN - Japanese Corporate Number symbol type.
        String lei = "54930043XZGB27CTOV49"; // String | Input identifiers for the LEI - Legal Entity Identifier symbol type
        String lxid = "LXID"; // String | Input identifiers for the type LXID - Markit Syndicated Loan Identifier symbol type.
        String md = "823642219"; // String | Input identifiers for the Moody's Ratings Identifier type.
        String redCode = "RedCode"; // String | Input identifiers for the type Red Code - Markit Reference Entity Identifier symbol type.
        String rssd = "FederalReserveRSSDIdentifier"; // String | Input identifiers for the RSSD - Federal Reserve RSSD symbol typ.
        String sedol = "B616C79"; // String | Input identifiers for the SEDOL symbol type.
        String spr = "562703"; // String | Input identifiers for the Price Ticker symbol type.
        String ticker = "PriceTicker"; // String | Input identifiers for the Price Ticker symbol type.
        String tickerExchange = "TSLA-NAS"; // String | Input identifiers for the TickerExchange.
        String tickerRegion = "TSLA-US"; // String | Input identifiers for the TickerRegion.
        String ukch = "UKCompanyHouse"; // String | Input identifiers for the UKCH - UK Company House symbol type.
        String valoren = "VALOR"; // String | Input identifiers for the Valoren (\"Valor\") symbol type.
        String wkn = "A1CX3T"; // String | Input identifiers for the WKN - German Securities symbol type.
        Integer candidatesCount = 40; // Integer | Maximum number of candidates to be returned. Parent entities, when includeParent is true, are not included in this count. <p>*minimum - 20*</p> <p>*maximum - 100*</p>
        try {
            EntityMatchesResponse result = apiInstance.getEntityMatch(name, country, state, url, includeEntityType, excludeEntityType, includeEntitySubType, excludeEntitySubType, includeParent, bbgFigi, bbgTicker, bic, cik, crd, creditsafe, crunchbase, cusip, ein, factsetId, fitch, gvkey, gvkeyIid, isin, jcn, lei, lxid, md, redCode, rssd, sedol, spr, ticker, tickerExchange, tickerRegion, ukch, valoren, wkn, candidatesCount);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling EntityMatchApi#getEntityMatch");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.FactSetConcordance.*;
import com.factset.sdk.FactSetConcordance.api.EntityMatchApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

EntityMatchApi apiInstance = new EntityMatchApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.FactSetConcordance.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*EntityMatchApi* | [**getEntityMatch**](docs/EntityMatchApi.md#getEntityMatch) | **GET** /factset-concordance/v2/entity-match | Get Entity Candidates and Matches for a single name and attributes.
*EntityMatchApi* | [**getEntityMatchForList**](docs/EntityMatchApi.md#getEntityMatchForList) | **POST** /factset-concordance/v2/entity-match | Get a list of Entity Candidates and Matches for a requested list of up to 25 names and attributes.
*EntityMatchBulkApi* | [**getEntityDecisions**](docs/EntityMatchBulkApi.md#getEntityDecisions) | **GET** /factset-concordance/v2/entity-decisions | Get the decisions of matches for the requested taskId.
*EntityMatchBulkApi* | [**getEntityTaskForList**](docs/EntityMatchBulkApi.md#getEntityTaskForList) | **POST** /factset-concordance/v2/entity-task | Input a file with names and attributes, creating a taskId.
*EntityMatchBulkApi* | [**getEntityTaskStatus**](docs/EntityMatchBulkApi.md#getEntityTaskStatus) | **GET** /factset-concordance/v2/entity-task-status | Gets the status of the requested taskId or all tasks for a User
*MappingsApi* | [**getEntityMappingDeleteForList**](docs/MappingsApi.md#getEntityMappingDeleteForList) | **POST** /factset-concordance/v2/entity-mapping-delete | Deletes mapping specified by the client.
*MappingsApi* | [**getEntityMappingForList**](docs/MappingsApi.md#getEntityMappingForList) | **POST** /factset-concordance/v2/entity-mapping | Saves a single-mapping specified by the client.
*MappingsApi* | [**getEntityUniverse**](docs/MappingsApi.md#getEntityUniverse) | **GET** /factset-concordance/v2/entity-universe | Retrieve all saved mappings within a requested universe
*MappingsApi* | [**getEntityUniverseForList**](docs/MappingsApi.md#getEntityUniverseForList) | **POST** /factset-concordance/v2/entity-universe | Retrieve all saved mappings within a requested universe or large list of client ids
*PeopleMappingApi* | [**getPeopleMappingDeleteForList**](docs/PeopleMappingApi.md#getPeopleMappingDeleteForList) | **POST** /factset-concordance/v2/people-mapping-delete | Deletes mapping specified by the client.
*PeopleMappingApi* | [**getPeopleMappingForList**](docs/PeopleMappingApi.md#getPeopleMappingForList) | **POST** /factset-concordance/v2/people-mapping | Saves a single-mapping specified by the client.
*PeopleMappingApi* | [**getPeopleUniverse**](docs/PeopleMappingApi.md#getPeopleUniverse) | **GET** /factset-concordance/v2/people-universe | Retrieve all saved mappings within a requested universe
*PeopleMappingApi* | [**getPeopleUniverseForList**](docs/PeopleMappingApi.md#getPeopleUniverseForList) | **POST** /factset-concordance/v2/people-universe | Retrieve all saved mappings within a requested universe or large list of client ids
*PeopleMatchApi* | [**getPeopleMatch**](docs/PeopleMatchApi.md#getPeopleMatch) | **GET** /factset-concordance/v2/people-match | Find potential people matches given a person&#39;s name.People matches can be retrieved using person&#39;s name and other attributes like firstname, middlename and lastname.
*PeopleMatchApi* | [**getPeopleMatchForList**](docs/PeopleMatchApi.md#getPeopleMatchForList) | **POST** /factset-concordance/v2/people-match | Find potential people matches given a person&#39;s name.
*PeopleMatchBulkApi* | [**getPeopleDecisions**](docs/PeopleMatchBulkApi.md#getPeopleDecisions) | **GET** /factset-concordance/v2/people-decisions | Get the decisions of matches for the requested taskId.
*PeopleMatchBulkApi* | [**getPeopleTaskForList**](docs/PeopleMatchBulkApi.md#getPeopleTaskForList) | **POST** /factset-concordance/v2/people-task | Create a People Concordance Task.
*PeopleMatchBulkApi* | [**getPeopleTaskStatus**](docs/PeopleMatchBulkApi.md#getPeopleTaskStatus) | **GET** /factset-concordance/v2/people-task-status | Get the Status of the People Tasks.
*SnowflakeApi* | [**getSnowflakeEntityMatchForList**](docs/SnowflakeApi.md#getSnowflakeEntityMatchForList) | **POST** /factset-concordance/v2/snowflake-entity-match | Perform an entity search and return a snowflake-friendly response. Up to 25 Names per request.
*SnowflakeApi* | [**snowflakeEntityMappingPost**](docs/SnowflakeApi.md#snowflakeEntityMappingPost) | **POST** /factset-concordance/v2/snowflake-entity-mapping | Save entity mappings to a universe
*UniversesApi* | [**getEntityUniverseStatistics**](docs/UniversesApi.md#getEntityUniverseStatistics) | **GET** /factset-concordance/v2/entity-universe-statistics | Get statistics on a given universe
*UniversesApi* | [**getUniverseForList**](docs/UniversesApi.md#getUniverseForList) | **POST** /factset-concordance/v2/universe | Create a new universe
*UniversesApi* | [**getUniverseStatistics**](docs/UniversesApi.md#getUniverseStatistics) | **GET** /factset-concordance/v2/universe-statistics | Get statistics on a given universe
*UniversesApi* | [**getUniverses**](docs/UniversesApi.md#getUniverses) | **GET** /factset-concordance/v2/universes | Fetch metadata for universes
*UniversesApi* | [**getUpdateUniverseForList**](docs/UniversesApi.md#getUpdateUniverseForList) | **POST** /factset-concordance/v2/update-universe | Update metadata for an existing universe


## Documentation for Models

 - [CreateUniverseRequest](docs/CreateUniverseRequest.md)
 - [EntityDecisionsResponse](docs/EntityDecisionsResponse.md)
 - [EntityMapping](docs/EntityMapping.md)
 - [EntityMappingDeleteRequest](docs/EntityMappingDeleteRequest.md)
 - [EntityMappingDeleteResponse](docs/EntityMappingDeleteResponse.md)
 - [EntityMappingRequest](docs/EntityMappingRequest.md)
 - [EntityMappingResponse](docs/EntityMappingResponse.md)
 - [EntityMatch](docs/EntityMatch.md)
 - [EntityMatchRequest](docs/EntityMatchRequest.md)
 - [EntityMatchRequestInput](docs/EntityMatchRequestInput.md)
 - [EntityMatchesResponse](docs/EntityMatchesResponse.md)
 - [EntityResponse](docs/EntityResponse.md)
 - [EntityTaskResponse](docs/EntityTaskResponse.md)
 - [EntityTaskStatus](docs/EntityTaskStatus.md)
 - [EntityTaskStatusResponse](docs/EntityTaskStatusResponse.md)
 - [EntityUniverseRequest](docs/EntityUniverseRequest.md)
 - [EntityUniverseResponse](docs/EntityUniverseResponse.md)
 - [EntityUniverseStatisticsResponse](docs/EntityUniverseStatisticsResponse.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [ErrorResponseSubErrors](docs/ErrorResponseSubErrors.md)
 - [MapStatus](docs/MapStatus.md)
 - [PeopleDecisions](docs/PeopleDecisions.md)
 - [PeopleDecisionsResponse](docs/PeopleDecisionsResponse.md)
 - [PeopleMapping](docs/PeopleMapping.md)
 - [PeopleMappingDeleteResponse](docs/PeopleMappingDeleteResponse.md)
 - [PeopleMappingRequest](docs/PeopleMappingRequest.md)
 - [PeopleMappingResponse](docs/PeopleMappingResponse.md)
 - [PeopleMatch](docs/PeopleMatch.md)
 - [PeopleMatchRequest](docs/PeopleMatchRequest.md)
 - [PeopleMatchRequestInput](docs/PeopleMatchRequestInput.md)
 - [PeopleMatchesResponse](docs/PeopleMatchesResponse.md)
 - [PeopleTask](docs/PeopleTask.md)
 - [PeopleTaskResponse](docs/PeopleTaskResponse.md)
 - [PeopleTaskStatus](docs/PeopleTaskStatus.md)
 - [PeopleTaskStatusResponse](docs/PeopleTaskStatusResponse.md)
 - [PeopleUniverseRequest](docs/PeopleUniverseRequest.md)
 - [PeopleUniverseResponse](docs/PeopleUniverseResponse.md)
 - [SnowflakeEntityMappingRequest](docs/SnowflakeEntityMappingRequest.md)
 - [SnowflakeEntityMappingResponse](docs/SnowflakeEntityMappingResponse.md)
 - [SnowflakeEntityMatchRequest](docs/SnowflakeEntityMatchRequest.md)
 - [SnowflakeEntityMatchResponse](docs/SnowflakeEntityMatchResponse.md)
 - [Universe](docs/Universe.md)
 - [UniverseMeta](docs/UniverseMeta.md)
 - [UniverseMetaResponse](docs/UniverseMetaResponse.md)
 - [UniverseStatistics](docs/UniverseStatistics.md)
 - [UniverseStatisticsResponse](docs/UniverseStatisticsResponse.md)
 - [UniversesResponse](docs/UniversesResponse.md)
 - [UpdateUniverseRequest](docs/UpdateUniverseRequest.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
